# validate_npm_package_name

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: lib.rs
