[package]
name = "validate_npm_package_name"
version = "0.1.0"
edition = "2021"
authors = ["Chersquwn <chersquwn@gmail.com>"]
description = "A crate to validate npm package name"
repository = "https://github.com/Chersquwn/validate_npm_package_name"
homepage = "https://github.com/Chersquwn/validate_npm_package_name"
license = "MIT"

[dependencies]
builtin_modules = "0.1.0"
regex = "1.11.0"
uri_encode = "1.0.2"
